--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-icons": "^4.7.1",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.3.6",
+    "tar": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
