--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "bootstrap": "^5.2.3",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.3.6",
     "tar": "^6.1.13",
     "web-vitals": "^2.1.4"
