--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/js-cookie": "^3.0.2",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "cookies": "^0.8.0",
     "js-cookie": "^3.0.1",
+    "link-react": "^3.0.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
