--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.7",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
